<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:layout_width="match_parent" android:layout_height="match_parent"
    			android:background="@color/fondo" >
    <Button android:id="@+id/simplex" android:layout_width="wrap_content"
        	android:layout_height="wrap_content" android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true" android:layout_marginLeft="100dp"
        	android:layout_marginTop="100dp" android:height="100dp"
        	android:text="@string/boton1" android:width="200dp" />
    <Button android:id="@+id/transporte" android:layout_width="wrap_content"
        	android:layout_height="wrap_content" android:layout_alignBaseline="@+id/simplex"
        	android:layout_alignBottom="@+id/simplex" android:layout_alignParentRight="true"
        	android:layout_marginRight="100dp" android:height="100dp"
        	android:text="@string/boton2" android:width="200dp" />
    <Button android:id="@+id/asignacion" android:layout_width="wrap_content"
        	android:layout_height="wrap_content" android:layout_alignLeft="@+id/simplex"
        	android:layout_alignParentBottom="true" android:layout_marginBottom="100dp"
        	android:height="100dp" android:text="@string/boton3" android:width="200dp" />
    <Button android:id="@+id/informacion" android:layout_width="wrap_content"
        	android:layout_height="wrap_content" android:layout_alignBaseline="@+id/asignacion"
        	android:layout_alignBottom="@+id/asignacion" android:layout_alignLeft="@+id/transporte"
        	android:height="100dp" android:text="@string/boton4" android:width="200dp" />
</RelativeLayout>